--- a/index.html
+++ b/index.html
@@ -3,30 +3,46 @@
     2. Right click html file and either run in default browser or another browser
   -->
 
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML/CSS Studio</title>
-    <!-- import CSS styles -->
-    <link rel="stylesheet" href="styles.css" /> 
-  </head>
-
-  <!-- page content goes into <body> -->
-  <body>
-    <div id="logoBar">
-      <h1>Welcome to 100 Acre Wood!</h1>
-      <img id="siteLogo" alt="Pooh-bear site logo" src="./assets/Header.png"/>
-      <h3>We're glad you're here :D</h3>
-    </div>
-    <hr/>
-    <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
-    </div>
-  </body>
-
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>HTML/CSS Studio</title>
+      <!-- import CSS styles -->
+      <style></style>
+      <link rel="stylesheet" href="styles.css" /> 
+    </head>
+  
+  
+    <!-- page content goes into <body> -->
+    <body>
+      <div id="logoBar">
+        <h1>Welcome to 100 Acre Wood!</h1>
+        <img id="siteLogo" alt="Pooh-bear site logo" src="./assets/Header.png"/>
+        <h3>We're glad you're here :D</h3>
+      </div>
+      <hr/>
+  
+      <div id="staffGallery">
+        <div class="card">
+          <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt="Upside-Down Eoere"/>
+          <h4 id="charName"><b>Upside-Down Eoere</b></h4>
+        </div>
+        <div class="card">
+          <img class="galleryImage" src="./assets/Eeyore-Zz.png" alt="Sleepy Eeyore"/>
+          <h4 id="charName"><b>Sleepy Eeyore</b></h4>
+        </div>
+        <div class="card">
+          <img class="galleryImage" src="./assets/Kanga-Roo.png" alt="Kanga-Roo Mama"/>
+          <h4 id="charName"><b>Kanga-Roo Mama</b></h4>
+        </div>
+        <div class="card">
+          <img class="galleryImage" src="./assets/Owl-Phone.png" alt="Owl Using Phone"/>
+          <h4 id="charName"><b>Smart Owl</b></h4>
+        </div>
+      
+        
+      </div>
+    </body>
+  
+  </html>
